The great Teslafication (Closes #6)
- Pointers now have a Tesla energy requirement.
- As such, PointerAction now has methods getTeslaCapacity and getTeslaPerUse

--- a/build.gradle
+++ b/build.gradle
@@ -6,10 +6,6 @@ buildscript {
             name = "forge"
             url = "http://files.minecraftforge.net/maven"
         }
-
-        maven {
-            url = "http://maven.epoxide.xyz"
-        }
     }
     dependencies {
         classpath 'net.minecraftforge.gradle:ForgeGradle:2.2-SNAPSHOT'
@@ -43,6 +39,12 @@ minecraft {
     // simply re-run your setup task after changing the mappings to update your workspace.
     mappings = "snapshot_20160518"
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
+}
+
+repositories {
+    maven {
+        url = "http://maven.epoxide.xyz"
+    }
 }
 
 dependencies {
