--- a/release-info.json
+++ b/release-info.json
@@ -1,5 +1,5 @@
 {
   "alpha": "1.10.2-0.1-alpha.1",
-  "beta": "",
-  "release": ""
+  "beta": "1.10.2-0.2-beta.0",
+  "release": "1.10.2-0.2-beta.0"
 }
