--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ buildscript {
 }
 apply plugin: 'net.minecraftforge.gradle.forge'
 
-version = "1.10.2-0.1-alpha.1"
+version = "1.10.2-0.2-beta.0"
 group= "notjoe.pointersmod"
 archivesBaseName = "pointersmod"
 
