--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,7 @@
+apply plugin: 'java'
+apply plugin: 'idea'
+apply plugin: 'net.minecraftforge.gradle.forge'
+
 buildscript {
     repositories {
         jcenter()
@@ -6,14 +10,14 @@ buildscript {
             url = "http://files.minecraftforge.net/maven"
         }
     }
+
     dependencies {
         classpath 'net.minecraftforge.gradle:ForgeGradle:2.2-SNAPSHOT'
     }
 }
-apply plugin: 'net.minecraftforge.gradle.forge'
 
 version = "1.10.2-0.2-beta.0"
-group= "notjoe.pointersmod"
+group = "notjoe.pointersmod"
 archivesBaseName = "pointersmod"
 
 sourceCompatibility = targetCompatibility = "1.8"
